# IcyTower-Clone

./: .gitignore  CMakeLists.txt  Makefile  README.md
resources/: doxygen.conf  scoreTable.txt
src/: EndGame.cpp  EndGame.h  FilePaths.h  Game.cpp  Game.h  GameRunner.cpp  GameRunner.h  GameSettings.h  MainMenu.cpp  MainMenu.h  Player.cpp  Player.h  TextureManager.cpp  TextureManager.h  Tile.cpp  Tile.h  UIButton.cpp  UIButton.h  Wall.h  main.cpp
tests/: test_main.cpp  test_platform.cpp  test_player.cpp  test_texture_manager.cpp
